<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="open">Open</string>
    <string name="widget">Widget</string>
    <string name="event">Event</string>

    <plurals name="notes_cut">
...
    <string name="ssh_show_public_key_preference_title">View generated SSH public key</string>
    <string name="message_book_has_no_link">Notebook has no repository link</string>
    <string name="message_note_created">Note created</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>

    <string name="schedule">Schedule</string>
    <string name="refile">Refile</string>
    <string name="deadline">Deadline</string>
    <string name="closed">Closed</string>

    <!-- TODO: Not hints, rename -->
    <string name="schedule_button_hint">Scheduled time</string>
...
    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="clear_database_performed">Database cleared</string>

    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
...
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

    <string name="book_encoding">Notebook\'s encoding</string>
...

    <string name="note_book_not_set">Notebook not set</string>
    <string name="title_can_not_be_empty">Title cannot be empty</string>
    <string name="can_not_be_empty">Cannot be empty</string>
    <string name="invalid_url">Invalid URL</string>

    <string name="no_notebooks">You have no notebooks</string>
    <string name="no_notes">Notebook has no notes</string>
    <string name="create_new_repository_for_syncing">Create new repository for syncing your notebooks</string>

    <string name="no_filters">You have no saved searches</string>

    <string name="book_shortcut_label">Notebook</string>
...
    <string name="reversed_note_click_action">Swap note click and long-click actions</string>
    <string name="reversed_note_click_action_summary">Click to select note, long-click to open</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="notes_list">List of notes</string>
    <string name="prefs_title_new_note">New note</string>
    <string name="prefs_title_notifications">Notifications</string>
    <string name="app">App</string>
    <string name="test_connection">Test connection</string>
    <string name="connecting">Connecting…</string>
    <string name="no_connection">No connection</string>
    <string name="connection_successful">Connection successful</string>
    <string name="last_sync_with_argument">Last sync: %s</string>

...
