...
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <!-- Entire note -->
...
                </LinearLayout>

                <!-- Title -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/title"
                    app:view_id="@+id/title_view"
                    app:edit_id="@+id/title_edit"
                    app:parse_checkboxes="false"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoFullscreen"
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_flag" />
                        <TextView
                            android:id="@+id/state_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/state"
                            tools:text="TODO"/>
                        <ImageButton
                            android:id="@+id/state_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_today" />
                        <TextView
                            android:id="@+id/scheduled_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/schedule_button_hint"/>
                        <ImageButton
                            android:id="@+id/scheduled_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_check_circle_outline" />
                        <TextView
                            android:id="@+id/closed_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/closed_button_hint"/>
                        <ImageButton
                            android:id="@+id/closed_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
...
    <!-- Top toolbar -->
    <!-- TODO: DRY -->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            style="@style/TopToolbar"
            app:menu="@menu/note_actions"
            app:navigationIcon="@drawable/ic_menu" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/sync_toolbar_progress"
...
